--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="earth">
-            <img src="../img/earth.png" alt="">
+            <img src="./img/earth.png" alt="">
             <div class="more-info">
                 <h1>Earth</h1>
                 <ul>
@@ -24,7 +24,7 @@
 
         <div class="moon-container">
             <div class="moon">
-                <img src="../img/full-moon-png-6.png" alt="">
+                <img src="./img/full-moon-png-6.png" alt="">
             </div>
         </div>
     </div>
